--- a/src/Component/FormularioVenda/Formulario.css
+++ b/src/Component/FormularioVenda/Formulario.css
@@ -54,6 +54,16 @@
     width: 100%;
     box-sizing: border-box;
   }
+  .form-select {
+    margin-bottom: 10px;
+    display: block;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box;
+  }
   
   button[type="submit"] {
     background-color: #4CAF50;
