--- a/src/Component/FormularioVenda/Formulario.css
+++ b/src/Component/FormularioVenda/Formulario.css
@@ -30,6 +30,7 @@
   .modal-close {
     border: none;
     background-color: transparent;
+    color: #000;
     font-size: 18px;
     cursor: pointer;
   }
