--- a/src/Pages/EstoquePage/Estoque.css
+++ b/src/Pages/EstoquePage/Estoque.css
@@ -1,92 +1,104 @@
 /* Estilos para a tabela */
 table {
     border-collapse: collapse;
-    width: 90%;
-  }
-  
-  th, td {
-    text-align: left;
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  
-  th {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  /* Estilos para o formulário */
-  .form-container {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    max-width: 500px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  .form-container input[type=text] {
     width: 100%;
-    padding: 15px;
-    margin: 5px 0 20px 0;
-    border: none;
-    background: #f1f1f1;
-  }
+}
   
-  .form-container input[type=text]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
+th, td {
+  text-align: left;
+  padding: 5px;
+  border-bottom: 25px solid #e00000;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Estilos para o formulário */
+.form-container {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  max-width: 500px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
   
-  .form-container .btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom:10px;
-    opacity: 0.8;
-  }
+.form-container input[type=text] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 20px 0;
+  border: none;
+  background: #f1f1f1;
+}
   
-  .form-container .cancel {
-    background-color: red;
-  }
+.form-container input[type=text]:focus {
+  background-color: #ddd;
+  outline: none;
+}
   
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
-  }
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+  
+.form-container .cancel {
+  background-color: red;
+}
+  
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
   
   /* Estilos para o botão de adicionar */
-  .open-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
-    position: fixed;
-    bottom: 23px;
-    right: 28px;
-    width: 280px;
-  }
+.open-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
   
-  .open-button:hover {
-    opacity: 1;
-  }
+.open-button:hover {
+  opacity: 1;
+}
 
- .btnestoque {
-  margin-left: 95px;
+.btnestoque {
   margin-bottom: 10px;
- }
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  margin-bottom: 20px;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+}
 
  .btn-edit{
-  
+    margin-left: 0.5em;
     display: inline-block;
     font-weight: 400;
     color: #212529;
@@ -108,5 +120,92 @@ table {
       background-color: #0069d9;
       border-color: #0062cc;
   
- }
+  }
+  .btn-danger {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+  }
+
+ @media (max-width: 576px) {
+  h1 {
+    font-size: rem;
+    text-align: center;
+  }
+  
+  .d-flex {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .btnestoque {
+    width: 100%;
+    flex-direction: row;
+    margin:auto;
+    margin-bottom: 1rem;
+  }
+  
+  th, td {
+    padding: 0.5rem;
+  }
+  
+  .btn-group-vertical > .btn-group::after, 
+  .btn-group-vertical > .btn-group::before {
+    display: none;
+  }
+  
+  .btn-group-vertical > .btn:not(:last-child) {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
+  .btn-group-vertical > .btn:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+}
+
+
+/* tornar a tabela responsiva */
+.table-responsive {
+  overflow-x: auto;
+ margin: auto;
+}
+
+/* adicionar rolagem horizontal na tabela */
+table {
+  width: 80%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: auto;
+  
+}
+
+/* remover a largura fixa das colunas */
+table th,
+table td {
+  border: 1px solid #dee2e6;
+  padding: 0.75rem;
+}
+
+/* adicionar borda inferior nas linhas da tabela */
+table tbody tr:nth-of-type(even) {
+  background-color: #f5f5f5;
+}
+
+table th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+
+
   
